# nebelhaus

./: .gitignore  CLAUDE.md  README.md  VERSION  bootstrap.sh  flake.nix
.github/workflows/: check.yml  release.yml
assets/: README.md
hosts/example/: default.nix
modules/: default.nix  options.nix
modules/collar/: default.nix
modules/den/: awake.sh  default.nix  haus.sh  statusline-refresh.sh  statusline.sh  wt.sh  zscratch.sh
modules/hearth/: default.nix
modules/hearth/ghostty/: config
modules/hearth/yazi/picker/: keymap.toml  yazi.toml
modules/hearth/zellij/: config.kdl  copy-clean.pl  custom.kdl  editor-open-pane.sh  float-term.sh  helix-open-pane.sh  image-preview.sh  launch.sh  new-tab-here.sh  newtab.sh  nix-config-open.sh  peek-run.sh  peek.sh  pounce-terminal.sh  yazi-shell.sh
modules/hearth/zellij/layouts/: custom.kdl
modules/hearth/zellij/link-handler/: Cargo.toml  build.sh  default.nix
modules/hearth/zellij/link-handler/src/: lib.rs  main.rs
modules/hearth/zellij/plugins/: zellij_link_handler.wasm  zellij_status_bar.wasm  zellij_tab_bar.wasm  zellij_tab_history.wasm
modules/hearth/zellij/status-bar/: Cargo.toml  build.sh  default.nix
modules/hearth/zellij/status-bar/src/: main.rs  one_line_ui.rs
modules/hearth/zellij/tab-bar/: Cargo.toml  build.sh  default.nix
modules/hearth/zellij/tab-bar/src/: line.rs  main.rs  tab.rs
modules/hearth/zellij/tab-history/: Cargo.toml  build.sh  default.nix
modules/hush/: default.nix  hush.sh
modules/lib/: gui-wait.nix
modules/pounce/: default.nix
modules/pounce/commands/: add-app.sh  hush.sh  nix-config.sh  rebuild.sh  report-issue-nebelhaus.sh  tour.sh
modules/prowl/: aerospace.toml  default.nix  wm-bindings.nix
modules/prowl/scripts/: cap-follow.sh  launch.sh  on-wake.sh  reopen-last-app.sh  resort-windows.sh
modules/secrets/: default.nix
modules/sill/: default.nix
modules/sill/sketchybar/: aerospace-notify.sh  sketchybarrc
modules/sill/sketchybar/plugins/: aerospace_watcher.sh  agents-hook.sh  agents-peek.sh  agents.sh  battery.sh  caffeinate.sh  (+23 more)
modules/snippets/: default.nix
modules/theme/: default.nix
modules/trill/: default.nix
notes/: hush-design.md
test/: awake.sh
(+4 files in other folders)
