[package]
name = "link-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
zellij-tile = "0.44.3"

# Shrink the wasm: the artifact ships in the nix store and loads at every
# session start, so trade compile time for size.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
