[package]
name = "zellij-status-bar"
version = "0.1.0"
edition = "2021"

# Fork of zellij's built-in status-bar (v0.44.3, default-plugins/status-bar),
# path deps swapped for the crates.io releases. One behavior change: the
# bottom-right quick hints (one_line_ui.rs secondary_keybinds) also surface
# NewTab, so the Super-t bind shows next to Super-p's "New Pane".
[dependencies]
ansi_term = "0.12"
lazy_static = "1.4.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
unicode-width = "0.1.8"
zellij-tile = "=0.44.3"
zellij-tile-utils = "=0.44.3"

[dev-dependencies]
regex = "1"

# Shrink the wasm: the artifact ships in the nix store and loads at every
# session start, so trade compile time for size.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
