[package]
name = "zellij-tab-bar"
version = "0.1.0"
edition = "2021"

# Fork of zellij's built-in tab-bar (v0.44.3, default-plugins/tab-bar), path
# deps swapped for the crates.io releases. Replaces the third-party zjstatus top
# bar: same active-anchored tab scroll viewport (upstream's, kept verbatim in
# line.rs), themed to nebelung, plus a peach username pill and a Ctrl+Tab /
# swap-layout right side rendered ourselves. See ../status-bar for the sibling
# bottom bar built the same way.
[dependencies]
ansi_term = "0.12"
unicode-width = "0.1.8"
zellij-tile = "=0.44.3"
zellij-tile-utils = "=0.44.3"

# Shrink the wasm: the artifact ships in the nix store and loads at every
# session start, so trade compile time for size.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
